--- a/scss/styles/_nav.scss
+++ b/scss/styles/_nav.scss
@@ -1,5 +1,6 @@
 .header-container {
 	position: relative;
+	padding-top: 1rem;
 
 	nav {
 		position: fixed;
@@ -23,7 +24,7 @@
 
 			li {
 				font-size: 1.8rem;
-				text-align: center;
+				// text-align: center;
 
 				a {
 					color: $primary-color;
@@ -60,7 +61,7 @@
 			ul {
 				display: flex;
 				flex-direction: column;
-				align-items: flex-start;
+				align-items: center;
 				justify-content: center;
 				list-style: none;
 				margin-top: 5rem;
@@ -72,11 +73,9 @@
 					padding: 0.5rem;
 					border-radius: 4px;
 					width: 100%;
-					text-align: left;
 					a {
 						color: $secondary-color;
 						font-size: 1.2rem;
-						margin-left: 2rem;
 						padding: 0.5rem 1rem;
 					}
 				}
